# vk-lab-24

./: .gitignore  README.md  hello.py  main.py  pyproject.toml
notebook/: EDA.ipynb  NNS.ipynb
src/: data_loader.py  feature_extractor.py  model.py  trainer.py
