[project]
name = "vklab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.7",
    "clip",
    "emoji>=2.13.2",
    "fastparquet>=2024.5.0",
    "h2o>=3.46.0.5",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "optuna>=4.0.0",
    "pandas>=2.2.3",
    "pyarrow>=17.0.0",
    "ruff>=0.6.7",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.3",
    "torch>=2.4.1",
    "torchvision>=0.19.1",
    "tqdm>=4.66.5",
    "transformers>=4.44.2",
    "wandb>=0.18.1",
]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }
